# python-powerup

./: .gitignore
01_multitasking/005_simple_chat/: bill.txt  chat_010.py  chat_020.py  chat_030.py  chat_040.py  chat_050.py  chat_060.py  chat_070.py  chat_080.py  greg.txt  pyproject.toml
01_multitasking/007_readline_chat/: bill.txt  chat_010.py  chat_020.py  chat_030.py  chat_040.py  chat_050.py  chat_060.py  chat_070.py  greg.txt
01_multitasking/010_http_weather/: http_weather_010.py  http_weather_020.py
03_dictionaries/: 10_brackets.py  20_get.py  30_parser.py  32_parser_arrays.py  40_wrapper.py  50_simplenamespace.py  52_simpleamespaces.py  54_safeamespace.py  60_munch.py  pyproject.toml
05_c_functions/: foreign-functions.key
05_c_functions/convolve/: build.sh  conv2d.c  conv2d.py
05_c_functions/sieve/: build.sh  sieve.c  sieve.py
