[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "03_dictionaries"
version = "0.1.0"
description = "Python learning exercises"
authors = ["Gregory Smith <greg@agilefrontiers.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
munch = "^2.5.0"
setuptools = "^69.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.pytest.ini_options]
testpaths = [".", "03_dictionaries"]
python_files = ["test_*.py", "*_test.py", "*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"